GNOME Bugzilla – Bug 617665
Panel doesn't shrink after disabling "high contrast"
Last modified: 2010-06-17 03:18:02 UTC
1. Enable "Enhance contrast in colours" 2. Icons are bigger now 3. Disable the checkbox from 1. 4. Panel is still big.
I think this should fix it: commit 6d7a48dc1c4db6ffaa9c08b8445012e3ef702259 Author: William Jon McCann <jmccann@redhat.com> Date: Tue Jun 15 17:14:45 2010 -0400 Fix panel shrinking after icon theme changes https://bugzilla.gnome.org/show_bug.cgi?id=617665
*** Bug 589539 has been marked as a duplicate of this bug. ***