Fix panel shrinking after icon theme changes

https://bugzilla.gnome.org/show_bug.cgi?id=617665